added some newlines and gave <image> a closing tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1 class="center">Calculating the Area and Circumference of a Circle</h1>
-    <image src="./images/circle.png" alt="circle" width="400ox" height="300px">
+    <image src="./images/circle.png" alt="circle" width="400ox" height="300px"></image>
     <p class="center">The purpose of this webpage is to calculate the area and circumference of a circle using πr^2=a and 2πr=c, respectively. The program is run by entering the desired diameter in an input box, and then clicking on the adjacent button</p>
     <button id="press-one">Calculate Circumference</button>
     <input id="enter-one" type="text">
